# enix

enix/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
enix/m4/: Makefile.am
enix/src/: Makefile.am
enix/src/.deps/: edit.Po  frame.Po  gtk_enix_film.Po  gtk_enix_preview.Po  main.Po  ogm_xvid_vorbis.Po  scaler.Po  utils.Po  xine_stream.Po  yuv2rgb.Po
enix/src/cut/: Makefile.am  cut.c  gtk_enix_film.c  gtk_enix_film.h  gtk_enix_preview.c  gtk_enix_preview.h  utils.c  utils.h  yuv2rgb.c  yuv2rgb.h
enix/src/enix/: Makefile.am  acodec_speex.c  acodec_vorbis.c  capture.c  enix.h  frame.c  mux_ogm.c  ogm_xvid_vorbis.c  ogm_xvid_vorbis.h  options.c  scaler.c  scaler.h  vcodec_ffmpeg.c  vcodec_theora.c  vcodec_xvid.c  xine_stream.c  xine_stream.h  zoom.c  zoom.h
enix/src/enix/libavcodec/: Makefile.am  allcodecs.c  utils.c
enix/src/enix/libavcodec/armv4l/: Makefile.am  dummy.c
enix/src/enix/libavcodec/i386/: Makefile.am  fft_sse.c
enix/src/enix/libavcodec/liba52/: Makefile.am
enix/src/enix/libogg/: Makefile.am  bitwise.c  framing.c
enix/src/enix/libogg/ogg/: Makefile.am  ogg.h  os_types.h
enix/src/enix/libspeex/: Makefile.am
enix/src/enix/libtheora/: Makefile.am  block_inline.h  blockmap.c  comment.c  compglobals.c  dct.c  dct_decode.c  dct_encode.c  decode.c  encode.c  encoder_internal.h  encoder_lookup.h  frarray.c  frinit.c  huffman.c  huffman.h  hufftables.h  idct.c  mcomp.c  mcomp.h  misc_common.c  pb.c  pp.c  pp.h  quant.c  quant_lookup.h  reconstruct.c  scan.c  toplevel.c  toplevel_lookup.h
enix/src/enix/libtheora/theora/: Makefile.am  theora.h
enix/src/enix/libvorbis/: Makefile.am  analysis.c  backends.h  barkmel.c  bitrate.c  bitrate.h  block.c  codebook.c  codebook.h  codec_internal.h  envelope.c  envelope.h  floor0.c  floor1.c  highlevel.h  info.c  lookup.c  lookup.h  lookup_data.h  lpc.c  lpc.h  lsp.c  lsp.h  mapping0.c  masking.h  mdct.c  mdct.h  misc.h  os.h  psy.c  psy.h  psytune.c  registry.c  registry.h  res0.c  scales.h  sharedbook.c  smallft.c  smallft.h  synthesis.c  (+4 more)
enix/src/enix/libvorbis/books/: Makefile.am
enix/src/enix/libvorbis/books/coupled/: Makefile.am  res_books_stereo.h
enix/src/enix/libvorbis/books/floor/: Makefile.am  floor_books.h
enix/src/enix/libvorbis/books/uncoupled/: Makefile.am  res_books_uncoupled.h
enix/src/enix/libvorbis/modes/: Makefile.am  floor_all.h  psych_11.h  psych_16.h  psych_44.h  psych_8.h  residue_16.h  residue_44.h  residue_44u.h  residue_8.h  setup_11.h  setup_16.h  setup_22.h  setup_32.h  setup_44.h  setup_44u.h  setup_8.h  setup_X.h
enix/src/enix/libvorbis/vorbis/: Makefile.am  codec.h  vorbisenc.h  vorbisfile.h
enix/src/reen/: Makefile.am  main.c
